Thu Aug 14 01:41:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimInputDialog.cpp:
	* src/QGaimInputDialog.h:
	* src/QGaimRequest.cpp:
	* src/QGaimRequest.h:
	* gaim.pro:
	  - Added QGaimInputDialog, and fixed the gaim_request_input UI.

Thu Aug 14 01:38:45 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimNotify.cpp:
	  - Synced with the latest 0.67cvs API changes.

Wed Aug 13 09:39:09 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	  - Remove the dependency on OSCAR from the account editor.

Sun Aug 10 14:19:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - QToolButton -> QAction.

Sun Aug 10 13:57:10 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Moved Show Offline Buddies into a settings/display menu.

Sun Aug 10 01:35:06 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Disabled the User Actions button.

Sun Aug 10 01:33:11 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The last character in the text sent is no longer stripped when
	    pressing the Send button instead of pressing Enter.

Sun Aug 10 01:25:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Event unseen types are now handled.
	  - Synced with the 0.67cvs API changes.

Sat Aug 09 23:11:03 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/main.cpp:
	  - Added the #ifdef LOCAL_COMPILE back.
	  - Moved the QMainWindow initialization before the core init.

Sat Aug 09 23:08:44 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp: