@@ -1,3 +1,10 @@
+Thu Aug 14 02:03:52 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBListWindow.cpp:
+	* src/QGaimBListWindow.h:
+	  - Changed the Add button to drop down a menu, which currently
+	    contains Add Buddy and Add Group, and will later have Add Chat.
+
 Thu Aug 14 01:41:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimInputDialog.cpp:
